--- a/Frontend/BoughtIt/src/app/app.component.css
+++ b/Frontend/BoughtIt/src/app/app.component.css
@@ -1,3 +1,17 @@
 .hide{
     display: none;
 }
+
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensures the container takes the full height of the viewport */
+}
+
+.content {
+    flex: 1; /* Pushes the footer to the bottom when content is less */
+}
+
+.footer {
+    background-color: #f1f1f1; 
+}
