--- a/Frontend/BoughtIt/src/app/app.component.html
+++ b/Frontend/BoughtIt/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-navbar [hidden]="!showNavbar"></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="app-container">
+    <main class="content">
+        <router-outlet></router-outlet>
+    </main>
+    <footer class="footer">
+        <app-footer></app-footer>
+    </footer>
+</div>
