Code Refactor phase #2

--- a/Frontend/BoughtIt/src/app/Components/cart/cart.component.html
+++ b/Frontend/BoughtIt/src/app/Components/cart/cart.component.html
@@ -36,7 +36,7 @@
 								</div>
 								<div class="col-xs-4">
 									<input type="text" class="form-control input-sm" (change)="updateQuantity(product)"
-										[value]="product.quantity" [(ngModel)]="product.quantity">
+										[(ngModel)]="product.quantity">
 								</div>
 								<div class="col-xs-2">
 									<button type="button" class="btn btn-link btn-xs"
