--- a/Frontend/BoughtIt/public/assets/css/style.css
+++ b/Frontend/BoughtIt/public/assets/css/style.css
@@ -1907,6 +1907,7 @@ blockquote cite {
     z-index: 2;
     margin: auto;
     padding: 10px;
+    background: rgba(255,255,255,0.4);
     color: #191919;
 }
 #billboard .button-prev{
